Fixed bug where create Todo tooltip was not showing upon hover

--- a/src/components/TodoHeader.css
+++ b/src/components/TodoHeader.css
@@ -37,6 +37,6 @@
   visibility: hidden;
 }
 
-.createTodo:hover .tooltip {
+.createTodoButton:hover .tooltip {
   visibility: visible;
 }
